--- a/configs/models/i_jepa_sioconv_ppodreamer.yaml
+++ b/configs/models/i_jepa_sioconv_ppodreamer.yaml
@@ -52,17 +52,16 @@ forward_dynamics:
       dim_out: 512
       num_stack: ${python.eval:"${models.i_jepa_predictor.model.n_patches.0} * ${models.i_jepa_predictor.model.n_patches.1}"}
     action_flatten:
-      _target_: torch.nn.Sequential
-      _args_:
-        - _target_: ami.models.components.one_hot.OneHotToEmbedding
-          num_embeddings: 3 # max of action choices in `vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY`
-          embedding_dim: 8
-        - _target_: torch.nn.Flatten
-          start_dim: -2
+      _target_: ami.models.components.multi_embeddings.MultiEmbeddings
+      choices_per_category:
+        _target_: hydra.utils.get_object
+        path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
+      embedding_dim: 8
+      do_flatten: True
     obs_action_projection:
       _target_: torch.nn.Linear
       # action_embedding_dim * num_action_choices + obs_embedding_dim
-      in_features: ${python.eval:"${..action_flatten._args_.0.embedding_dim} * 5 + ${..observation_flatten.dim_out}"}
+      in_features: ${python.eval:"${..action_flatten.embedding_dim} * 5 + ${..observation_flatten.dim_out}"}
       out_features: ${..core_model.dim}
     core_model:
       _target_: ami.models.components.sioconv.SioConv
@@ -84,9 +83,9 @@ forward_dynamics:
           out_features: ${models.i_jepa_target_encoder.model.out_dim}
           num_components: 8
     action_hat_dist_head:
-      _target_: ami.models.components.one_hot.MultiOneHots
-      in_features: ${..core_model.dim}
-      choices_per_category:
+      _target_: ami.models.components.discrete_policy_head.DiscretePolicyHead
+      dim_in: ${..core_model.dim}
+      action_choices_per_category:
         _target_: hydra.utils.get_object
         path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
     reward_hat_dist_head:
@@ -123,9 +122,9 @@ policy_value:
       dim_hidden: 512
       depth: 4
     policy_head:
-      _target_: ami.models.components.one_hot.MultiOneHots
-      in_features: ${..observation_hidden_projection.dim_out}
-      choices_per_category:
+      _target_: ami.models.components.discrete_policy_head.DiscretePolicyHead
+      dim_in: ${..observation_hidden_projection.dim_out}
+      action_choices_per_category:
         _target_: hydra.utils.get_object
         path: ami.interactions.environments.actuators.vrchat_osc_discrete_actuator.ACTION_CHOICES_PER_CATEGORY
     value_head:
