--- a/configs/models/learn_only_sioconv.yaml
+++ b/configs/models/learn_only_sioconv.yaml
@@ -1,4 +1,5 @@
 image_encoder: i_jepa_target_encoder # Alias for ImageEncodingAgent.
+image_decoder: i_jepa_target_visualization_decoder # Alias for MultiStepCuriosityAgent.
 
 i_jepa_target_encoder:
   _target_: ami.models.model_wrapper.ModelWrapper
@@ -124,3 +125,22 @@ value:
       normal_cls:
         _target_: hydra.utils.get_class
         path: ami.models.components.fully_connected_fixed_std_normal.DeterministicNormal
+
+i_jepa_target_visualization_decoder:
+  _target_: ami.models.model_wrapper.ModelWrapper
+  default_device: ${devices.0}
+  parameter_file: ???
+  has_inference: True
+  model:
+    _target_: ami.models.i_jepa_latent_visualization_decoder.IJEPALatentVisualizationDecoder
+    input_n_patches:
+      - ${python.eval:"${shared.image_height} // ${models.i_jepa_target_encoder.model.patch_size}"}
+      - ${python.eval:"${shared.image_width} // ${models.i_jepa_target_encoder.model.patch_size}"}
+    input_latents_dim: ${models.i_jepa_target_encoder.model.out_dim}
+    decoder_blocks_in_and_out_channels:
+      - [512, 512]
+      - [512, 256]
+      - [256, 128]
+      - [128, 64]
+    n_res_blocks: 3
+    num_heads: 4
