--- a/configs/experiment/learn_only_sioconv.yaml
+++ b/configs/experiment/learn_only_sioconv.yaml
@@ -1,4 +1,5 @@
 # @package _global_
+# 学習済パラメータ: https://drive.google.com/file/d/1j6AS8rs6jXZKD5vguKwqS4RsPj68Kdjp/view?usp=share_link
 
 defaults:
   - override /data_collectors: dynamics
