--- a/configs/trainers/dreaming_policy_value/ppo.yaml
+++ b/configs/trainers/dreaming_policy_value/ppo.yaml
@@ -8,7 +8,7 @@ partial_dataloader:
   drop_last: true
 
 partial_optimizer:
-  _target_: torch.optim.Adam
+  _target_: torch.optim.AdamW
   _partial_: true
   lr: 1e-4
   betas: [0.9, 0.999]
