--- a/configs/experiment/i_jepa_sioconv_ppodreamer_multi_step_large.yaml
+++ b/configs/experiment/i_jepa_sioconv_ppodreamer_multi_step_large.yaml
@@ -52,7 +52,7 @@ data_collectors:
   image:
     max_len: ${python.eval:"24 * ${trainers.i_jepa.partial_dataloader.batch_size}"}
   forward_dynamics_trajectory:
-    max_len: ${python.eval:"${trainers.forward_dynamics.partial_sampler.max_samples} * ${trainers.forward_dynamics.partial_sampler.sequence_length}"}
+    max_len: 1000 # 100 sec
   dreaming_initial_states:
     max_len: ${python.eval:"16 * ${trainers.dreaming_policy_value.partial_dataloader.batch_size}"}
 
