--- a/configs/models/learn_only_sioconv.yaml
+++ b/configs/models/learn_only_sioconv.yaml
@@ -60,13 +60,14 @@ forward_dynamics:
           dim_in: ${....core_model.dim}
           dim_out: ${models.i_jepa_target_encoder.model.out_dim}
           num_stack: ${....observation_flatten.num_stack}
-        - _target_: ami.models.components.fully_connected_fixed_std_normal.FullyConnectedFixedStdNormal
-          dim_in: ${..0.dim_out}
-          dim_out: ${models.i_jepa_target_encoder.model.out_dim}
-        # - _target_: ami.models.components.mixture_desity_network.NormalMixtureDensityNetwork
-        #   in_features: ${..0.dim_out}
-        #   out_features: ${models.i_jepa_target_encoder.model.out_dim}
-        #   num_components: 8
+        # - _target_: ami.models.components.fully_connected_fixed_std_normal.FullyConnectedFixedStdNormal
+        #   dim_in: ${..0.dim_out}
+        #   dim_out: ${models.i_jepa_target_encoder.model.out_dim}
+        - _target_: ami.models.components.mixture_desity_network.NormalMixtureDensityNetwork
+          in_features: ${..0.dim_out}
+          out_features: ${models.i_jepa_target_encoder.model.out_dim}
+          num_components: 8
+          eps: 0.1
     action_hat_dist_head:
       _target_: ami.models.components.discrete_policy_head.DiscretePolicyHead
       dim_in: ${..core_model.dim}
