--- a/configs/trainers/ppo/default.yaml
+++ b/configs/trainers/ppo/default.yaml
@@ -7,7 +7,7 @@ partial_dataloader:
   shuffle: true
 
 partial_optimizer:
-  _target_: torch.optim.Adam
+  _target_: torch.optim.AdamW
   _partial_: true
   lr: 1e-4
   betas: [0.9, 0.999]
